# GamerHackCS2

./: .gitignore  CMakeLists.txt  PATTERNS.md  README.md  build.bat  build_debug.bat  build_release.bat
documentation/: PATTERNS.md  README.md  adding-settings-and-features.md  architecture.md  build-and-deploy.md  logging.md  patterns-and-sdk-updates.md  validation-and-debugging.md
src/: dllmain.cpp
src/core/: config.cpp  config.h  core.cpp  core.h  hooks.cpp  hooks.h  interfaces.cpp  interfaces.h  menu.cpp  menu.h  patterns.h  schema.cpp  schema.h  variables.h
src/features/: features.cpp  features.h
src/features/bypass/: bypass.cpp  bypass.h  bypass_actions.cpp  bypass_actions.h  bypass_crc.cpp  bypass_crc.h  bypass_create_move.cpp  bypass_create_move.h  bypass_lifecycle.cpp  bypass_lifecycle.h
src/features/inventory/: inventory.cpp  inventory.h  inventory_actions.cpp  inventory_actions.h  inventory_runtime.cpp  inventory_runtime.h  inventory_state.cpp  inventory_state.h
src/features/legitbot/: legitbot.cpp  legitbot.h  legitbot_aim.cpp  legitbot_aim.h  legitbot_autowall.cpp  legitbot_autowall.h  legitbot_core.cpp  legitbot_core.h  legitbot_math.cpp  legitbot_math.h  legitbot_targeting.cpp  legitbot_targeting.h  legitbot_triggerbot.cpp  legitbot_triggerbot.h
src/features/misc/: misc.cpp  misc.h  misc_camera.cpp  misc_camera.h  misc_core.cpp  misc_core.h  misc_effects.cpp  misc_effects.h  misc_engpred.cpp  misc_engpred.h  misc_movement.cpp  misc_movement.h
src/features/ragebot/: ragebot.cpp  ragebot.h
src/features/visuals/: esp.cpp  esp.h  radar.cpp  radar.h  sniper_crosshair.cpp  sniper_crosshair.h  visuals.cpp  visuals.h
src/sdk/: common.h  const.h  entity.cpp  entity.h  entity_cache.h  entity_handle.h  functionlist.cpp  functionlist.h  keyvalues.h
src/sdk/datatypes/: color.h  matrix.h  qangle.h  rect.h  stronghandle.h  usercmd.h  utlmap.h  utlmemory.h  utlstring.h  utlsymbol.h  utlvector.h  vector.h  vector2.h  vector4.h
src/sdk/econ/: econitem.h  econitemschema.h  inventory.h  itemdefinition.cpp  itemdefinition.h
src/sdk/gameutils/: cl_entity_listener.cpp  cl_entity_listener.h  cl_players.cpp  cl_players.h  cl_weapons.cpp  cl_weapons.h
src/sdk/gcsdk/: gcsharedobjectcache.h  soid.h
src/sdk/interfaces/: ccsgoinput.h  cgameentitysystem.h  cgametracemanager.h  iappsystem.h  ibasefilesystem.h  iengineclient.h  ienginecvar.h  igameevent.h  igameresourceservice.h  iglobalvars.h  iinputsystem.h  ilocalize.h  imaterialsystem2.h  interface.h  ipvs.h  ischemasystem.h  isoundopsystem.h  isource2client.h  iswapchain.h
src/sdk/protobuf/: protobuf_common.h
src/utilities/: bones.cpp  bones.h  detourhook.h  easing.h  fnv1a.h  input.cpp  input.h  log.cpp  log.h  math.cpp  math.h  memory.cpp  memory.h  notify.cpp  notify.h  render.cpp  render.h  trace.cpp  trace.h  xorstr.h
